# 2025-QuEra

./: .gitignore  README.md  demo.ipynb  pyproject.toml
assets/: QAOA_generator.ipynb
assets/examples/: ghz_state_prep_1.py  ghz_state_prep_2.py
assets/scorer/: pyproject.toml
assets/scorer/src/iquhack_scoring/: __init__.py  score.py
assets/scorer/test/: test_scorer.py
team-solutions/: wumbo.md
team-solutions/decrypt+deserialize/: 1.1.py  1.2.py  2.py  3.py  4.py  5.py  README.md
