[project]
name = "iquhack-scoring"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Phillip Weinberg", email = "weinbe58@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "kirin-toolchain>=0.9.2",
    "bloqade[qasm2,pyqrack-cpu]>=0.16.0",
    "bloqade-hackathon-move>=0.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "mqt-qcec>=2.8.1",
    "qiskit>=1.3.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iquhack_scoring"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.4",
    "ipython>=8.29.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "numpy>=2.1.3",
    "pre-commit>=4.0.1",
    "pyright>=1.1.388",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "rust-just>=1.36.0",
    "tomlkit>=0.13.2",
]
